--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # MongoDB database
+  # MongoDB database (to be done)
   mongodb:
     image: mongo:7.0
     container_name: kiit_mongodb
